<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:textSize="24dp"
        android:textStyle="bold"/>
    <ImageView
        android:id="@+id/img_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/location"
        android:layout_below="@+id/title"
        android:layout_alignLeft="@id/title"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:id="@+id/txt_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:layout_toRightOf="@id/img_location"
        android:layout_alignTop="@id/img_location"
        android:layout_alignBottom="@id/img_location"
        android:textStyle="bold"/>
    <RelativeLayout
        android:id="@+id/txt_box"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_location"
        android:background="@drawable/kotak"
        android:padding="7dp"
        android:layout_alignLeft="@id/img_location"
        android:layout_marginTop="15dp">
        <TextView
            android:id="@+id/txt_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_information"
            android:textAlignment="center"
            />
        <RelativeLayout
            android:id="@+id/info_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_info"
            android:layout_centerHorizontal="true">
            <TextView
                android:id="@+id/pembaruan_last"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pembaruan terakhir: "
                />
            <TextView
                android:id="@+id/txt_last_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_update"
                android:layout_toRightOf="@id/pembaruan_last"
                android:layout_alignTop="@id/pembaruan_last"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textStyle="bold"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/info_new"
            android:layout_centerHorizontal="true">
            <TextView
                android:id="@+id/pembaruan_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pembaruan selanjutnya: " />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/pembaruan_next"
                android:layout_toRightOf="@id/pembaruan_next"
                android:text="@string/next_update"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textStyle="bold"
                />
        </RelativeLayout>


    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/card1"
        android:layout_width="170dp"
        android:layout_height="175dp"
        android:layout_below="@id/txt_box"
        android:layout_alignLeft="@id/txt_box"
        android:layout_marginTop="30dp"
        android:background="@drawable/rectangle">
        <ImageView
            android:id="@+id/img_card1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:src="@drawable/manage_search"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card1"
            android:layout_below="@id/img_card1"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textStyle="bold"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/card2"
        android:layout_width="170dp"
        android:layout_height="175dp"
        android:layout_below="@id/txt_box"
        android:layout_alignRight="@id/txt_box"
        android:layout_marginTop="30dp"
        android:background="@drawable/rectangle">
        <ImageView
            android:id="@+id/img_card2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:src="@drawable/bookmark_added"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card1"
            android:layout_below="@id/img_card2"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/card3"
        android:layout_width="170dp"
        android:layout_height="175dp"
        android:layout_below="@id/card1"
        android:layout_alignLeft="@id/txt_box"
        android:layout_marginTop="30dp"
        android:background="@drawable/rectangle">
        <ImageView
            android:id="@+id/img_card3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/assessment"
            android:layout_marginTop="28dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card3"
            android:layout_below="@id/img_card3"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/card4"
        android:layout_width="170dp"
        android:layout_height="175dp"
        android:layout_below="@id/card2"
        android:layout_alignRight="@id/txt_box"
        android:layout_marginTop="30dp"
        android:background="@drawable/rectangle">
        <ImageView
            android:id="@+id/img_card4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/settings"
            android:layout_marginTop="28dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card1"
            android:layout_below="@id/img_card4"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </RelativeLayout>
</RelativeLayout>